feat: 完成报表和目标的数据对接

--- a/menshi/list.html
+++ b/menshi/list.html
@@ -12,7 +12,7 @@
       <thead>
         <tr>
           <th>序号</th>
-          <th>姓名</th>
+          <th width="65">姓名</th>
           <th>下发时间</th>
           <th>订单</th>
           <th>预计到店时间</th>
@@ -75,7 +75,7 @@
           tabelTbody +=
           '<tr onclick="javascript:window.location.href=\'detail.html?id='+ item.uuid +'\'">'
             + '<td>'+ (index+1) +'</td>'
-            + '<td>'+ item.name1 +'</td>'
+            + '<td width="65">'+ item.name1 +'</td>'
             + '<td>'+ xiafaTime +'</td>'
             + '<td>'+ order +'</td>'
             + '<td>'+ shopTime +'</td>'
