--- a/yaoyue/list.html
+++ b/yaoyue/list.html
@@ -12,7 +12,7 @@
       <thead>
         <tr>
           <th>序号</th>
-          <th>姓名</th>
+          <th width="65">姓名</th>
           <th>接收时间</th>
           <th>类别</th>
           <th>状态</th>
@@ -85,7 +85,7 @@
           tabelTbody +=
           '<tr onclick="javascript:window.location.href=\'detail.html?id='+ item.uuid +'\'">'
             + '<td>'+ (index+1) +'</td>'
-            + '<td>'+ item.name1 +'</td>'
+            + '<td width="65">'+ item.name1 +'</td>'
             + '<td>'+ baobeiTime +'</td>'
             + '<td>'+ customerFlag +'</td>'
             + '<td>'+ customerStatus +'</td>'
