--- a/zhuake/list.html
+++ b/zhuake/list.html
@@ -12,7 +12,7 @@
 		<thead>
 			<tr>
 				<th>序号</th>
-				<th>姓名</th>
+				<th width="65">姓名</th>
 				<th>抓取日期</th>
 				<th>类别</th>
 				<th>客资状态</th>
@@ -83,7 +83,7 @@
           tabelTbody +=
           '<tr onclick="javascript:window.location.href=\'detail.html?id='+ item.uuid +'\'">'
             + '<td>'+ (index+1) +'</td>'
-            + '<td>'+ item.name1 +'</td>'
+            + '<td width="65">'+ item.name1 +'</td>'
             + '<td>'+ createTime +'</td>'
             + '<td>'+ customerFlagName +'</td>'
             + '<td>'+ statusName +'</td>'
