--- a/menshi/mine-target.html
+++ b/menshi/mine-target.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../components/head.html?__inline">
 
-<p>设置本月的目标(暂未完成)</p>
+<p>设置目标</p>
 <div class="panel panel-primary">
   <div class="panel-body">
-    <form action="mine-target.html" class="form-horizontal" role="form">
+    <form id="form" action="" class="form-horizontal" role="form">
       <div class="form-group">
         <label class="col-xs-4 control-label no-padding">目标时间</label>
         <div class="col-xs-8 no-padding-left">
@@ -39,15 +39,6 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-4 control-label no-padding">成交率</label>
-        <div class="col-xs-8 no-padding-left">
-          <div class="input-group">
-            <input name="paid_percent" type="number" class="form-control">
-            <div class="input-group-addon">%</div>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
         <div class="col-xs-offset-2 col-xs-8">
           <input type="submit" class="btn btn-primary btn-block" value="保存">
         </div>
@@ -61,7 +52,117 @@
 </script>
 
 <script>
+  var isUpdate = false,
+      uuid = '';
+  
+  // 获取初始化数据
+  getData(1);
 
+  // 获取抓客报表
+  function getData(timeFlag){
+    api.listObject('SalesroomReport', {
+      creator_id: api.userInfo.userUuid,
+      time_flag: parseInt(timeFlag),
+    }, 0, 1, function(data){
+      if(data.list.length > 0){
+        isUpdate = true;
+        var obj = data.list[0];
+        uuid = obj.uuid;
+        $('select[name=time_type]').val(obj.timeFlag);
+        $('input[name=accept_validate_customer_number]').val(obj.sendValidNumber);
+        $('input[name=invite_customer_number]').val(obj.inviteShopNumber);
+        $('input[name=paid_customer_number]').val(obj.dealOrderTotal);
+        $('input[name=taoxi_money]').val(obj.orderPrice);
+      }else{
+        isUpdate = false;
+        uuid = '';
+        $('input[name=accept_validate_customer_number]').val('');
+        $('input[name=invite_customer_number]').val('');
+        $('input[name=paid_customer_number]').val('');
+        $('input[name=taoxi_money]').val('');
+      }
+    });
+  }
+
+  // 时间更换
+  $('select[name=time_type]').change(function(){
+    getData($(this).val());
+  });
+  
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    message: '数据验证未通过',
+    fields: {
+      accept_validate_customer_number: {
+        validators: {
+          notEmpty: {
+            message: '接收有效客资数不能为空'
+          },
+          integer: {
+            message: '接收有效客资数必须为数字'
+          }
+        }
+      },
+      invite_customer_number: {
+        validators: {
+          notEmpty: {
+            message: '邀约到店数不能为空'
+          },
+          integer: {
+            message: '邀约到店数必须为数字'
+          }
+        }
+      },
+      paid_customer_number: {
+        validators: {
+          notEmpty: {
+            message: '成交数不能为空'
+          },
+          integer: {
+            message: '成交数必须为数字'
+          }
+        }
+      },
+      taoxi_money: {
+        validators: {
+          notEmpty: {
+            message: '成交套系均价不能为空'
+          },
+          integer: {
+            message: '成交套系均价必须为数字'
+          }
+        }
+      },
+    },
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
+  // 表单提交
+  function commitForm(){
+    var params = {};
+    // 表单数据
+    params['time_flag'] = $('select[name=time_type]').val();
+    params['send_valid_number'] = $('input[name=accept_validate_customer_number]').val();
+    params['invite_shop_number'] = $('input[name=invite_customer_number]').val();
+    params['deal_order_total'] = $('input[name=paid_customer_number]').val();
+    params['order_price'] = $('input[name=taoxi_money]').val();
+    // 额外数据
+    if(!isUpdate){
+      params['creator_id'] = api.userInfo.userUuif;
+    }
+    params['modify_time'] = new Date().getTime();
+    // 调用接口
+    api.saveObject('SalesroomReport', params, function(data){
+      if(data.retMsg == 'OK'){
+        alert('保存成功');
+        //window.location.reload();
+      }else{
+        alert(data.retMsg);
+      }
+    });
+  }
 </script>
 
 <link rel="import" href="../components/foot.html?__inline">
