--- a/yaoyue/mine-target.html
+++ b/yaoyue/mine-target.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../components/head.html?__inline">
 
-<p>设置本月的目标(暂未完成)</p>
+<p>设置目标</p>
 <div class="panel panel-primary">
   <div class="panel-body">
     <form id="form" action="" class="form-horizontal" role="form">
@@ -52,10 +52,11 @@
 </script>
 
 <script>
-  var isUpdate = false;
+  var isUpdate = false,
+      uuid = '';
   
   // 获取初始化数据
-  //getData(1);
+  getData(1);
 
   // 获取抓客报表
   function getData(timeFlag){
@@ -66,13 +67,15 @@
       if(data.list.length > 0){
         isUpdate = true;
         var obj = data.list[0];
-        $('select[name=time_type]').val(obj.time_flag);
-        $('input[name=baobei_validate_customer_number]').val(obj.record_valid_customer);
-        $('input[name=invite_customer_number]').val(obj.invite_shop_customer);
-        $('input[name=network_paid_customer_number]').val(obj.network_deal_customer);
-        $('input[name=total_paid_number]').val(obj.deal_order_total);
+        uuid = obj.uuid;
+        $('select[name=time_type]').val(obj.timeFlag);
+        $('input[name=baobei_validate_customer_number]').val(obj.recordValidCustomer);
+        $('input[name=invite_customer_number]').val(obj.inviteShopCustomer);
+        $('input[name=network_paid_customer_number]').val(obj.networkDealCustomer);
+        $('input[name=total_paid_number]').val(obj.dealOrderTotal);
       }else{
         isUpdate = false;
+        uuid = '';
         $('input[name=baobei_validate_customer_number]').val('');
         $('input[name=invite_customer_number]').val('');
         $('input[name=network_paid_customer_number]').val('');
@@ -82,7 +85,7 @@
   }
 
   // 时间更换
-  $('.time-select').change(function(){
+  $('select[name=time_type]').change(function(){
     getData($(this).val());
   });
   
@@ -140,21 +143,23 @@
   function commitForm(){
     var params = {};
     // 表单数据
-    params['time_flag'] = parseInt($('select[name=time_type]').val());
-    params['record_valid_customer'] = parseInt($('input[name=baobei_validate_customer_number]').val());
-    params['invite_shop_customer'] = parseInt($('input[name=invite_customer_number]').val());
-    params['network_deal_customer'] = parseInt($('input[name=network_paid_customer_number]').val());
-    params['deal_order_total'] = parseInt($('input[name=total_paid_number]').val());
+    params['time_flag'] = $('select[name=time_type]').val();
+    params['record_valid_customer'] = $('input[name=baobei_validate_customer_number]').val();
+    params['invite_shop_customer'] = $('input[name=invite_customer_number]').val();
+    params['network_deal_customer'] = $('input[name=network_paid_customer_number]').val();
+    params['deal_order_total'] = $('input[name=total_paid_number]').val();
     // 额外数据
     if(!isUpdate){
       params['creator_id'] = api.userInfo.userUuif;
+    }else{
+      params['uuid'] = uuid;
     }
     params['modify_time'] = new Date().getTime();
     // 调用接口
     api.saveObject('InviteReport', params, function(data){
       if(data.retMsg == 'OK'){
         alert('保存成功');
-        window.location.reload();
+        //window.location.reload();
       }else{
         alert(data.retMsg);
       }
