--- a/zhuake/add.html
+++ b/zhuake/add.html
@@ -31,8 +31,7 @@
             <span class="icon iconfont icon-map"></span> 地区
           </label>
           <div class="col-xs-8 no-padding-left">
-            <select name="location_id" class="form-control">
-            </select>
+            <input name="location" type="text" class="form-control">
           </div>
         </div>
         <div class="form-group">
@@ -117,11 +116,10 @@
 
   var channelLoaded = false,
       channelWayLoaded = false,
-      locationLoaded = false,
       updateObj = 'none',
       // 用定时器检测select是否加载完成
       isSelectLoaded = setInterval(function(){
-        if(channelLoaded && locationLoaded){
+        if(channelLoaded){
           if(channelWayLoaded){
             // 6。清除定时器
             // 清除定时器
@@ -135,7 +133,7 @@
                   updateObj = data.retVal;
                   $('input[name=name]').val(updateObj.name1);
                   $('select[name=channel_id]').val(updateObj.channel_id);
-                  $('select[name=location_id]').val(updateObj.location_id);
+                  $('input[name=location]').val(updateObj.location);
                   $('select[name=customer_flag]').val(updateObj.customer_flag);
                   $('input[name=tel]').val(updateObj.tel1);
                   $('input[name=wechat]').val(updateObj.wechat1);
@@ -185,12 +183,6 @@
     });
   });
   
-  // 地区
-  api.listIdAndName('BusLocation', {}, function(options){
-    $('select[name=location_id]').append(options);
-    locationLoaded = true;
-  });
-  
 
   $('#form').bootstrapValidator({
     // live: 'disabled',
@@ -204,9 +196,6 @@
       },
       tel: {
         validators: {
-          notEmpty: {
-            message: '手机号不能为空'
-          },
           regexp: {
             regexp: /^(1[0-9]{2})+\d{8}$/,
             message: '手机号不合法',
@@ -234,7 +223,7 @@
           }
         }
       },
-      location_id: {
+      location: {
         validators: {
           notEmpty: {
             message: '地区不能为空'
@@ -261,7 +250,7 @@
     params['name1'] = $('input[name=name]').val();
     params['channel_id'] = $('select[name=channel_id]').val();
     params['channel_way_id'] = $('select[name=channel_way_id]').val()?$('select[name=channel_way_id]').val():'';
-    params['location_id'] = $('select[name=location_id]').val();
+    params['location'] = $('input[name=location]').val();
     params['customer_flag'] = $('select[name=customer_flag]').val();
     params['tel1'] = $('input[name=tel]').val();
     params['wechat1'] = $('input[name=wechat]').val();
