--- a/zhuake/operate-chongxinliuzhuan.html
+++ b/zhuake/operate-chongxinliuzhuan.html
@@ -4,9 +4,9 @@
 	<div id="operate-msg" class="panel panel-success hidden">
 		<div class="panel-body">
 			<div class="operate-message">
-				<div class="msg">该客资已被设成无效！</div>
+				<div class="msg">重新流转成功！</div>
 				<div class="operate col-xs-10 col-xs-offset-1">
-					<a href="list.html" class="btn btn-default btn-block">保存，返回客资列表</a>
+					<a href="javascript:history.back(-1);" class="btn btn-default btn-block">保存返回</a>
 				</div>
 			</div>
 		</div>
@@ -16,13 +16,14 @@
 <script>
 	iframe.init();
 </script>
+
 <script>
   var uuid = request.getParam('id');
   api.saveObject('BusCustomer', {
     uuid: uuid,
-    valid_flag: 2,
-    customer_user_status: 4,
-    zktime: new Date().getTime()
+    customer_user_status: 1,
+    zktime: new Date().getTime(),
+    appeal: 0, // 重新流转申诉设置为0
   }, function(data){
     if(data.retMsg == 'OK'){
       $('#operate-msg').removeClass('hidden');
