--- a/zhuake/operate-shensu.html
+++ b/zhuake/operate-shensu.html
@@ -1,7 +1,24 @@
 <link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
-	申诉操作未知
+	<div class="panel panel-primary">
+		<div class="panel-body">
+			<div class="operate-message">
+				<form id="form" action="" class="form-horizontal form" role="form">
+					<div class="msg">申诉</div>
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label left">申诉理由</label>
+						<div class="col-xs-12">
+							<textarea name="reason" class="form-control" rows="3"></textarea>
+						</div>
+					</div>
+					<div class="operate col-xs-10 col-xs-offset-1">
+						<input type="submit" class="btn btn-default btn-block" value="保存返回">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script>
@@ -9,7 +26,42 @@
 </script>
 <script>
   var uuid = request.getParam('id');
-  console.log(uuid);
+
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    fields: {
+      reason: {
+        validators: {
+          notEmpty: {
+            message: '申诉理由不能为空'
+          }
+        }
+      },
+    },
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
+  // 表单提交
+  function commitForm(){
+    var params = {};
+    // 表单数据
+    params['appeal_reason'] = $('textarea[name=reason]').val();
+    // 额外数据
+    params['uuid'] = uuid;
+    params['zktime'] = new Date().getTime();
+    params['customer_user_status'] = 14;
+    params['appeal'] = 0; // 提起申诉设置为0
+    // 调用接口
+    api.saveObject('BusCustomer', params, function(data){
+      if(data.retMsg == 'OK'){
+        api.goBack();
+      }else{
+        alert(data.retMsg);
+      }
+    });
+  }
 </script>
 
 <link rel="import" href="../components/foot.html?__inline">
