--- a/apply/apply.html
+++ b/apply/apply.html
@@ -142,10 +142,10 @@
           notEmpty: {
             message: '手机号不能为空'
           },
-          // phone: {
-          //   message: '手机号不合法',
-          //   country: 'cn'
-          // }
+          regexp: {
+            regexp: /^(1[0-9]{2})+\d{8}$/,
+            message: '手机号不合法',
+          }
         }
       },
       company_id: {
