--- a/apply/index.html
+++ b/apply/index.html
@@ -1,15 +1,5 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<div class="header apply-header">
-	<div class="site">
-		<span class="name">网销大师</span>
-		<span class="version">v3.0云端版</span>
-	</div>
-	<div class="title">
-		功能申请
-	</div>
-</div>
+<link rel="import" href="head.html?__inline">
 
 <iframe id="iframe" name="iframe" src="apply.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="foot.html?__inline">
