--- a/menshi/list.html
+++ b/menshi/list.html
@@ -8,7 +8,7 @@
       </select>
     </div>
   </div>
-  <table class="table table-bordered table-striped">
+  <table class="table table-bordered table-striped table-small">
       <thead>
         <tr>
           <th>序号</th>
