--- a/zhuake/list.html
+++ b/zhuake/list.html
@@ -8,13 +8,13 @@
       </select>
 		</div>
 	</div>
-	<table class="table table-bordered table-striped">
+	<table class="table table-bordered table-striped table-small">
 		<thead>
 			<tr>
-				<th>序号</th>
+				<th width="44">序号</th>
 				<th width="65">姓名</th>
 				<th>抓取日期</th>
-				<th>类别</th>
+				<th width="44">类别</th>
 				<th>客资状态</th>
 			</tr>
 		</thead>
