fix: 下发日期限制两天，加好友功能popover显示

--- a/yaoyue/operate-xiafa.html
+++ b/yaoyue/operate-xiafa.html
@@ -11,7 +11,7 @@
 					<div class="form-group">
 						<label class="col-xs-12 control-label left">填写预计到店时间</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control datepicker" placeholder="选择日期" readonly="readonly">
+							<input type="text" class="form-control datepicker" data-special="true" placeholder="选择日期" readonly="readonly">
               <input name="shop_date" type="hidden">
 						</div>
             <div class="col-xs-6">
