fix: list下表格宽度用scss计算rem

--- a/menshi/list.html
+++ b/menshi/list.html
@@ -12,7 +12,7 @@
       <thead>
         <tr>
           <th>序号</th>
-          <th width="65">姓名</th>
+          <th class="table-th-width-65">姓名</th>
           <th>下发时间</th>
           <th>订单</th>
           <th>预计到店时间</th>
