--- a/yaoyue/list.html
+++ b/yaoyue/list.html
@@ -11,10 +11,10 @@
   <table class="table table-bordered table-striped table-small">
       <thead>
         <tr>
-          <th width="44">序号</th>
-          <th width="65">姓名</th>
+          <th class="table-th-width-44">序号</th>
+          <th class="table-th-width-65">姓名</th>
           <th>接收时间</th>
-          <th width="44">类别</th>
+          <th class="table-th-width-44">类别</th>
           <th>状态</th>
         </tr>
       </thead>
